# DivvyDroid

./: .gitignore  .travis.yml  CMakeLists.txt  DivvyDroid.pro  README.CodingStyle.md  README.md  adbclient.cpp  adbclient.h  adbshell.cpp  adbshell.h  deviceinfo.cpp  deviceinfo.h  inputhandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  videothread.cpp  videothread.h
device/: adbclient.cpp  adbclient.h  deviceinfo.cpp  deviceinfo.h  videothread.cpp  videothread.h
input/: devicebuttonhandler.cpp  devicebuttonhandler.h  devicetouchhandler.cpp  devicetouchhandler.h  input_to_adroid_keys.cpp  input_to_adroid_keys.h  inputhandler.cpp  inputhandler.h  monkeyhandler.cpp  monkeyhandler.h  shellkeyboardhandler.cpp  shellkeyboardhandler.h
pkg/: divvydroid.desktop
pkg/arch/: .gitignore  PKGBUILD
pkg/mingw/: Dockerfile  copydeps.sh  deps-find.sh  docker-build.sh  docker-image.sh  github-upload-release.sh  installer.nsi  nsi-installer.sh
res/: CMakeLists.txt  divvydroid.qrc  divvydroid.qss  divvydroid.rc  mingw-icon.sh
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  initthread.cpp  initthread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/cmake/: FindFFmpeg.cmake
src/device/: adbclient.cpp  adbclient.h  deviceinfo.cpp  deviceinfo.h  videothread.cpp  videothread.h
src/input/: devicebuttonhandler.cpp  devicebuttonhandler.h  devicetouchhandler.cpp  input_to_adroid_keys.h  inputhandler.cpp  inputhandler.h  monkeyhandler.cpp  shellkeyboardhandler.cpp
